--- a/report.tex
+++ b/report.tex
@@ -9,7 +9,7 @@
 \usepackage{geometry}
 \geometry{margin=1in}
 
-\title{EEL 4712C - Digital Design: Lab Report}
+\title{EEL 4712C - Digital Design: Lab Report git@github.com:colerottenberg/lab3.git3}
 \author{Cole Rottenberg \\ 11062528}
 \date{Due Date}
 
