working on report

--- a/report.tex
+++ b/report.tex
@@ -113,7 +113,7 @@ The testing of the design was done by first simulating the FSM in ModelSim. The 
 
 % One Process FSM VHDL Code
 \begin{lstlisting}[caption=One Process FSM VHDL Code, label=lst:one-process-fsm-vhdl-code]
-  library ieee;
+library ieee;
 use ieee.std_logic_1164.all;
 use ieee.numeric_std.all;
 -- FSM:
@@ -145,7 +145,7 @@ end entity fsm;
 
 architecture behavioral of fsm is
     -- Define the states
-    type state_t is (START, INIT, COMPUTE, ADD, BUFF_LE, CHECK_LE, DONE_STATE, RESTART);
+    type state_t is (START, INIT, COMPUTE, CHECK_LE, DONE_STATE, RESTART);
     signal state, next_state:       state_t := START;
 
 begin
@@ -161,44 +161,56 @@ begin
         elsif (rising_edge(clk)) then
             done <= '0';
             i_sel <= '0';
-            i_en <= '1';
+            i_en <= '0';
             x_sel <= '0';
-            x_en <= '1';
+            x_en <= '0';
             y_sel <= '0';
-            y_en <= '1';
-            n_en <= '1';
-            result_en <= '1';
+            y_en <= '0';
+            n_en <= '0';
+            result_en <= '0';
             result_sel <= '0';
             
             case state is
                 when START =>
                     -- All to 0
-                    i_en <= '0';
-                    x_en <= '0';
-                    y_en <= '0';
-                    n_en <= '0';
                     done <= '0';
+                    i_sel <= '0';
+                    i_en <= '0';
+
+                    x_sel <= '0';
+                    x_en <= '0';
+
+                    y_sel <= '0';
+                    y_en <= '0';
+
+                    n_en <= '0';
+
+                    result_en <= '0';
+                    result_sel <= '0';
+
                     if go = '1' then
                         state <= INIT;
+						n_en <= '1';
                     else
                         state <= START;
                     end if;
                 -- Implement default defined values for every state
 
                 when INIT =>
-                    -- Unable Done
-                    done <= '0';
-                    i_sel <= '1';
-                    i_en <= '1';
-                    x_sel <= '1';
-                    x_en <= '1';
-                    y_en <= '1';
-                    n_en <= '1';
                     if (n_eq_0 = '0') then
                         result_sel <= '0'; -- Select the result
+                        i_sel <= '1'; -- i become 2... beginning of loop
+                        i_en <= '1';
+
+                        x_sel <= '1'; -- X become 0... starting value
+                        x_en <= '1';
+
+                        y_sel <= '1'; -- Y become 1... starting value
+                        y_en <= '1';
                         state <= CHECK_LE;
                     else
                         result_sel <= '1'; -- Select default 0 result if n = 0
+						result_en <= '1'; -- Enable for DONE_STATE
                         state <= DONE_STATE;
                     end if;
 
@@ -206,31 +218,27 @@ begin
                     -- Check if i <= n
                     if (i_le_n = '1') then
                         state <= COMPUTE;
+						i_en <= '1';
                     else
+                        x_en <= '0';
+                        y_en <= '0';
+                        i_en <= '0';
                         state <= DONE_STATE;
+						result_sel <= '0';
+						result_en <= '1';
                     end if;
                 
                 when COMPUTE =>
                     i_sel <= '0';
-                    i_en <= '1'; -- Redundant
+                    i_en <= '0'; -- Redundant
                     x_sel <= '0';
                     x_en <= '1'; -- Redundant
-
-                    state <= ADD;
-
-                when ADD =>
-                    -- Allows Clock Cycle so the addition of x and y can be done before y is loaded
                     y_sel <= '0';
                     y_en <= '1'; -- Redundant
 
-                    state <= BUFF_LE;
-                
-                when BUFF_LE =>
                     state <= CHECK_LE;
 
                 when DONE_STATE =>
-                    result_sel <= '0'; -- DBG 
-                    result_en <= '1'; -- Only enable the result... the init state handles which result to select
                     -- Need to prevent bad state loops because of race conditions
                     done <= '1';
                     if go = '1' then
@@ -239,12 +247,13 @@ begin
                         state <= RESTART;
                     end if;
                 when RESTART =>
-                    result_sel <= '0'; -- DBG 
-                    result_en <= '1'; -- Only enable the result... the init state handles which result to select
+ 
                     done <= '1';
                     -- Now we can restart the process if go is high
                     if go = '1' then
                         state <= INIT;
+						done <= '0';
+						n_en <= '1';
                     else
                         state <= RESTART;
                     end if;
